<?xml version="1.0"?>
<package>
  <name>concert_waypoints_navigation_rviz_plugin</name>
  <version>0.0.0</version>
  <description>
    Provides plugin to capture resource and send navigator goal
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/concert_waypoints_navigation_rviz_plugin</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>concert_msgs</build_depend>
  <build_depend>concert_service_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>concert_msgs</run_depend>
  <run_depend>concert_service_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <!-- TODO : Add plugin -->
  </export>
</package>
